refactored test to parameterized test